<resources>
    <string name="app_name">Game_1</string>
    <string name="berufe_button">Berufe Button</string>
    <string name="next_day_button">Next Day Button</string>
    <string name="pop_icon">Pop_Icon:</string>
    <string name="count_max_gain">c/m/+g</string>
    <string name="food_icon">Food_Icon:</string>
    <string name="buy">Buy</string>
    <string name="Myreturn">return</string>
    <string name="prev">Prev</string>
    <string name="hp">HP: %d</string>
    <string name="atk">ATK: %d</string>
    <string name="def">DEF: %d</string>
    <string name="next">Next</string>
    <string name="gold_icon">Gold_Icon</string>
    <string name="reset">RESET</string>
    <string name="bauer">Bauer</string>
    <string name="haendler">Händler</string>
    <string name="ritter">Ritter</string>
    <string name="your_army">YOUR ARMY</string>
    <string name="player_army_img">player_army_img</string>
    <string name="enemy_army">ENEMY ARMY</string>
    <string name="enemy_army_img">enemy_army_img</string>
    <string name="kill_enemy">Kill enemy</string>
    <string name="attack">Attack</string>
    <string name="holzfaeller">Holzfäller</string>
    <string name="amo_max_use">%d/%d/-%d</string>
    <string name="whatdoBauerndo">Bauern produzieren jeden Tag Nahrung \n,um dein Volk am Leben zu halten.</string>
    <string name="whatdoHaendlerdo">Händler erhöhen das Gold, \nwelches jeden dritten Tag produziert wird</string>
    <string name="whatdoHolzfaellerdo">Holzfäller sammeln Holz \n No shit.</string>
    <string name="whatdoRitterdo">Die Kampfkraft deiner Armee hängt von deinen Rittern ab.</string>
    <string name="lagererweiterung_button">Lagererweiterung Button</string>
    <string name="def0">0</string>
</resources>
