<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_test2"
    tools:context=".Playergphome">


    <ImageButton
        android:id="@+id/btnBerufe"
        android:layout_width="105dp"
        android:layout_height="44dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="36dp"
        android:contentDescription="@string/berufe_button"
                app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/btnLagerhaus"
        android:layout_width="105dp"
        android:layout_height="44dp"
        app:layout_constraintBottom_toBottomOf="@+id/btnNextDay"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="@string/lagererweiterung_button"
        />

    <ImageButton
        android:id="@+id/btnNextDay"
        android:layout_width="121dp"
        android:layout_height="51dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/next_day_button" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/Pop_Icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/icon_population_test_transparent_colored"
            android:contentDescription="@string/pop_icon" />

        <TextView
            android:id="@+id/idPopcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_max_gain"
            android:textSize="21sp" />

        <ImageView
            android:id="@+id/Food_Icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/icon_food_test_transparent_colored"
            android:contentDescription="@string/food_icon" />

        <TextView
            android:id="@+id/idFoodcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_max_gain"
            android:textSize="21sp" />

        <ImageView
            android:id="@+id/Gold_Icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/icon_gold_test_transparent_colored"
            android:contentDescription="@string/gold_icon" />

        <TextView
            android:id="@+id/idGoldcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_max_gain"
            android:textSize="21sp" />

        <ImageView
            android:id="@+id/Wood_Icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@drawable/icon_gold_test_transparent_colored"
            android:contentDescription="@string/gold_icon" />

        <TextView
            android:id="@+id/idWoodcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/count_max_gain"
            android:textSize="21sp" />
    </LinearLayout>

    <Button
        android:id="@+id/btnReset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/reset"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvdaycounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/def0"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="21sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>